--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,1 @@
-{
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  }
-}
+{"firestore":{"rules":"firestore.rules","indexes":"firestore.indexes.json"},"flutter":{"platforms":{"android":{"default":{"projectId":"dine-ease-e2337","appId":"1:396066408474:android:ce12e23516fb59404069a3","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"dine-ease-e2337","configurations":{"android":"1:396066408474:android:ce12e23516fb59404069a3","ios":"1:396066408474:ios:f028d821b17343714069a3","macos":"1:396066408474:ios:f028d821b17343714069a3","web":"1:396066408474:web:8b78780871d283004069a3","windows":"1:396066408474:web:76da927642d3e4474069a3"}}}}}}
