--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,4 +35,42 @@ flutter:
 
   uses-material-design: true
 
+  assets:
+    - 'assets/images/'
+
+  fonts:
+    - family: poppins
+      fonts:
+        - asset: assets/fonts/poppins_light.ttf
+          weight: 300
+        - asset: assets/fonts/poppins_light_italic.ttf
+          weight: 300
+          style: italic
+        - asset: assets/fonts/poppins_regular.ttf
+          weight: 400
+        - asset: assets/fonts/poppins_italic.ttf
+          weight: 400
+          style: italic
+        - asset: assets/fonts/poppins_medium.ttf
+          weight: 500
+        - asset: assets/fonts/poppins_medium_italic.ttf
+          weight: 500
+          style: italic
+        - asset: assets/fonts/poppins_semi_bold.ttf
+          weight: 600
+        - asset: assets/fonts/poppins_semi_bold_italic.ttf
+          weight: 600
+          style: italic
+        - asset: assets/fonts/poppins_bold.ttf
+          weight: 700
+        - asset: assets/fonts/poppins_bold_italic.ttf
+          weight: 700
+          style: italic
+        - asset: assets/fonts/poppins_extra_bold.ttf
+          weight: 800
+        - asset: assets/fonts/poppins_bold_italic.ttf
+          weight: 800
+          style: italic
+
+
 
