--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,21 @@ dependencies:
   get_storage: ^2.1.1
 
   # Network
-  dio: ^5.4.3+1
+  dio: ^5.5.0+1
 
   # Firebase
   firebase_core: ^3.1.1
   cloud_firestore: ^5.0.2
   firebase_auth: ^5.1.1
+
+  # Signing Providers
+  google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^7.0.1
+
+  #Maps
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  location: ^7.0.0
 
 dev_dependencies:
   flutter_test:
