--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,19 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.0.1
 
-  #Maps
+  # Maps
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   location: ^7.0.0
+
+  # Rating
+  flutter_rating_bar: ^4.0.1
+
+  #Image
+  cached_network_image: ^3.3.1
+
+  # Payment Gateway
+  razorpay_flutter: ^1.3.7
 
 dev_dependencies:
   flutter_test:
